--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,11 +1,14 @@
 <h1>Google Map</h1>
   <div id="map" class="map"></div>
-
+  <ul>
+    <li>lat: <span id="lat"></span></li>
+    <li>lng: <span id="lng"></span></li>
+  </ul>
     <script>
       <!-- google map initialaize -->
       var map;
       var myLocation = {lat: 34.809006620739176, lng: 135.5614241910291};
-      
+      var lat_lng;
 
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -23,7 +26,7 @@
 
 
         map.addListener('click', function(mapsMouseEvent) {
-          //alert(`lat:${latLng.lat}, lng:${latLng.lng}`);
+          //delete current marker
           marker.setMap(null);
           
           //create new marker
@@ -31,11 +34,14 @@
             position: mapsMouseEvent.latLng,
             map: map
           });
+          lat_lng = mapsMouseEvent.latLng;
+          map.panTo(lat_lng);
+          console.log(lat_lng.toString());
+          //alert(lat_lng);
+          document.getElementById('lat').textContent = lat_lng.lat();
+          document.getElementById('lng').textContent = lat_lng.lng();
         });
       }
-            // define lat lng for showing on html
-            //var lat = latLng.lat();
-            //var lng = latLng.lng();
       
 
     </script>
