lat lng content ajax debug

--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -3,7 +3,7 @@
 <form>
   <label for="title">Dangerous Point</label>
   <input type="textarea" id="content">
-  <input type="submit" id="submit_button" value="register"> 
+  <button type='button' id='submit_button'>register</button>
 </form>
 <ul>
   <li>lat: <span id="lat"></span></li>
