change script tag

--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -9,3 +9,8 @@
   <li>lat: <span id="lat"></span></li>
   <li>lng: <span id="lng"></span></li>
 </ul>
+<%= link_to 'index', maps_path %>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP']%>&callback=initMap"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
