--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,6 +1,14 @@
 <h1>Google Map</h1>
-<div id="map" class="map"></div>
+<div id ="index_map" class="index_map"></div>
 <ul>
   <li>lat: <span id="lat"></span></li>
   <li>lng: <span id="lng"></span></li>
 </ul>
+<h2>Post index</h2>
+  <ul>
+    <% @maps.each do |map| %>
+      <li><%= map.content %>: <%= map.latitude %></li>
+    <% end %>
+  </ul>
+<%= link_to 'new', new_map_path %>
+
