--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -7,6 +7,7 @@
     <% end %>
   </ul>
 <%= link_to 'new', new_map_path, data: {'turbolinks'=> false} %>
+<%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
 
 
 
