--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -1,14 +1,21 @@
-<h1>Google Map</h1>
-<div id="new_map" class="new_map"></div>
-<form>
-  <label for="title">Dangerous Point</label>
-  <input type="textarea" id="content">
-  <button type='button' id='submit_button'>register</button>
-</form>
-<ul>
-  <li>lat: <span id="lat"></span></li>
-  <li>lng: <span id="lng"></span></li>
-</ul>
-<%= link_to 'index', maps_path, data: {'turbolinks' => false} %>
+<% if user_signed_in? %>
+  <h1>Google Map</h1>
+    <div id="new_map" class="new_map"></div>
+  <form>
+    <label for="title">Dangerous Point</label>
+    <input type="textarea" id="content">
+    <button type='button' id='submit_button'>register</button>
+  </form>
+  <ul>
+    <li>lat: <span id="lat"></span></li>
+    <li>lng: <span id="lng"></span></li>
+  </ul>
+  <%= link_to 'index', maps_path, data: {'turbolinks' => false} %>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP']%>&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP']%>&callback=initMap"></script>
+<% else %>
+  <h1>RISC!</h1>
+  
+  <%= link_to '会員登録', new_user_registration_path %>
+  <%= link_to 'ログイン', new_user_session_path %>
+<% end %>
