--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -3,7 +3,7 @@
 <h2>Post index</h2>
   <ul>
     <% @maps.each do |map| %>
-      <li><%= map.title %> <%= map.latitude %>: <%= map.longitude %></li>
+      <li><%= map.title %> <%= map.latitude %>: <%= map.longitude %>: <%= map.user.name %></li>
     <% end %>
   </ul>
 
@@ -25,6 +25,7 @@
       markers = handler.addMarkers(<%=raw @hash.to_json %>);
       handler.bounds.extendWith(markers);
       handler.fitMapToBounds();
+      handler.getMap().setZoom(5);
   });
 </script>
   
