--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -3,13 +3,14 @@
     <div id="new_map" class="new_map"></div>
   <form>
     <label for="title">Dangerous Point</label>
+    <input type='textarea' id='title'>
     <button type='button' id='submit_button'>register</button>
   </form>
   <ul>
     <li>lat: <span id="lat"></span></li>
     <li>lng: <span id="lng"></span></li>
   </ul>
-  <%= link_to 'index', posts_path, data: {'turbolinks' => false} %>
+  <%= link_to 'index', maps_path, data: {'turbolinks' => false} %>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP']%>&callback=initMap"></script>
 <% else %>
