stop using ajax and changes to hidden_field

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -3,7 +3,7 @@
 <h2>Post index</h2>
   <ul>
     <% @map_index.each do |map| %>
-      <li><%= link_to map.id, map_path(map.id), data: {'turbolinks'=> false} %> <%= map.latitude %>: <%= map.longitude %>: <%= map.user.name %></li>
+      <li><%= link_to map.id, map_path(map.id), data: {'turbolinks'=> false} %> <%= map.latitude %>: <%= map.longitude %>: <%= map.user.name %>:<%= map.title.title %></li>
     <% end %>
   </ul>
 
