--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -1,14 +1,20 @@
 <% if user_signed_in? %>
   <h1>Google Map</h1>
     <div id="new_map" class="new_map"></div>
-  <form>
-    <label for="title">Dangerous Point</label>
-    <input type='textarea' id='title'>
-    <button type='button' id='submit_button'>register</button>
-  </form>
+  <div>
+    <%= form_with(model: @map, local:true) do |f| %>
+      <%= f.hidden_field :latitude, id:'lat' %>
+      <%= f.hidden_field :longitude, id:'lng' %>
+        
+      <%= f.fields_for :title do |t| %>
+        <%= t.text_field :title %>
+      <% end %>
+      <%= f.submit 'register' %>
+    <% end %>
+  </div>
   <ul>
-    <li>lat: <span id="lat"></span></li>
-    <li>lng: <span id="lng"></span></li>
+    <li>lat: <span id="latitude"></span></li>
+    <li>lng: <span id="longitude"></span></li>
   </ul>
   <%= link_to 'index', maps_path, data: {'turbolinks' => false} %>
 
