--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -3,7 +3,7 @@
     <div id="new_map" class="new_map"></div>
 <!-- user form -->
   <div>
-    <%= render 'layouts/form', map: @new_map %>
+    <%= render 'maps/form', map: @new_map %>
   </div>
   <%= link_to 'index', maps_path, data: {'turbolinks' => false} %>
 
