--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,17 +1,18 @@
 #new_map {
     width: 100%;
-    height: 300px;
-    margin: 0 auto;
+    height: 400px;
+    margin-bottom: 50px;
 }
 
 #index_map {
     width: 100%;
-    height: 300px;
+    height: 500px;
     margin: 0 auto;
 }
 
 #show_map {
     width: 100%;
-    height: 300px;
+    height: 400px;
     margin: 0 auto;
 }
+
