--- a/app/views/maps/_infowindow.html.erb
+++ b/app/views/maps/_infowindow.html.erb
@@ -1,1 +1,8 @@
-<h3><%= link_to map.title.title, map_path(map.id), data: {'turbolinks' => false}  %></h3>
+<h4><%= map.title.title %></h4>
+<div>
+  <p><%= map.comment.comment.truncate(60) %></p>
+</div>
+<%= link_to '詳細...', map_path(map.id), data: {'turbolinks' => false}  %>
+<% if current_user == map.user %>
+  <%= link_to '削除する', map, method: :delete, style: 'color:red; margin-left:200px;' %>
+<% end %>
