--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<h1>マイページ</h1>
-<h2><%= @user.name %></h2>
-
+<div class='text-center mt-3'>
+  <h1>マイページ</h1>
+  <h2><%= @user.name %></h2>
+</div>
 
 <div id='user_map'>
 </div>
