add update function and toppage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+#navbar {
+  background-color: #C0C0C0;
+}
+
+
+footer {
+  text-align: center;
+}
+
+footer small {
+  display: block;
+  padding: 8px 0;
+  color: #C0C0C0;
+}
