--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
     <div class="container">
       <%= yield %>
     </div>
+    <footer>
+      <small>&copy; 2020 MAX.K.K</small>
+    </footer>
   </body>
-
-
+</html>
