--- a/app/views/maps/_detail.html.erb
+++ b/app/views/maps/_detail.html.erb
@@ -16,7 +16,7 @@
     <li><%= shop_no_vending_machine %></li>
   </ul>
   <ul>
-    <li><%= @map_show.comment.comment %></li>
+    <li><%= @map.comment.comment %></li>
   </ul>
 </div>
 
