--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark" style='background-color: #708090;'>
   <% if user_signed_in? %>
     <a class="navbar-brand" data-turbolinks='false' href="/" >RISC</a>
   <% else %>
