--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <div class='text-center mt-3'>
+  <div class='text-center mt-3 mb-5'>
     <h1>新規投稿</h1>
   </div>
 <!-- user form -->
