--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <%= yield %>
     </div>
     <footer>
-      <small>&copy; 2020 MAX.K.K</small>
+      <small>&copy; 2020  PROJECT RISC produced by MAX.K.K </small>
     </footer>
   </body>
 </html>
