--- a/app/views/maps/_detail.html.erb
+++ b/app/views/maps/_detail.html.erb
@@ -1,22 +1,33 @@
-<div>
-  <ul>
-    <li><%= traffic_volume %></li>
-    <li><%= traffic_speed %></li>
-    <li><%= traffic_large_car %></li>
-    <li><%= traffic_people %></li>
-    <li><%= traffic_stop %></li>
-  </ul>
-  <ul>
-    <li><%= road_condition %></li>
-    <li><%= road_sidewalk %></li>
-    <li><%= road_narrow %></li>
-  </ul>
-  <ul>
-    <li><%= shop_no_shop %></li>
-    <li><%= shop_no_vending_machine %></li>
-  </ul>
-  <ul>
-    <li><%= @map.comment.comment %></li>
-  </ul>
+<div class='row'>
+  <div class='col-sm-4 mb-5'>
+    <h5>交通量関係での危険箇所</h5>
+    <% traffic_details.each do |traffic| %>
+      <ul>
+        <li class='text-danger'><%= traffic %></li>
+      </ul>
+    <% end %>
+  </div>
+  <div class='col-sm-4'>
+    <h5>路面状況での危険箇所</h5>
+    <% road_details.each do |road| %>
+      <ul>
+        <li class='text-danger'><%= road %></li>
+      </ul>
+    <% end %>
+  </div>
+  <div class='col-sm-4'>
+    <h5>補給・休憩関係での危険箇所</h5>
+    <% shop_details.each do |shop| %>
+      <ul>
+        <li class='text-danger'><%= shop %></li>
+      </ul>
+    <% end %>
+  </div>
 </div>
 
+<div class='row'>
+  <div class='col-12 mb-2'>
+    <h5>追記事項・代替ルートなど</h5>
+      <p class='jumbotron'><%= @map.comment.comment %></p>
+  </div>
+</div>
