--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -2,7 +2,7 @@
   <h1>RISC!!</h1>
   <p>Road Infomation Site for Cyclist</p>
 </div>
-<h6>マーカーをクリックしてください！マーカーの中の'詳細'をクリックすると詳細ページへと飛びます！</h6>
+<h6>マーカーをクリックしてください！マーカーの中の'詳細'をクリックすると詳細ページへと飛びます！<%= link_to 'RISCとは？', about_path %></h6>
 <div id ='top_map' class='top_map'></div>
 
 
