--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,9 +11,12 @@
     <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item"><%= link_to '新規投稿', new_map_path, data: {'turbolinks' => false }, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'お知らせ', news_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'マイページ', user_path(current_user), data: {'turbolinks' => false }, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
       <% else %>
+        <li class="nav-item"><%= link_to 'RISCとは', about_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'お知らせ', news_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to '会員登録', new_user_registration_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %></li>
       <% end %>
