--- a/app/views/toppages/about.html.erb
+++ b/app/views/toppages/about.html.erb
@@ -26,5 +26,6 @@
     </article>
   <h3>サービス運営者について</h3>
     <p>このサービスは個人開発の為、皆様に御迷惑をかける可能性が多々あると思いますが、見守っていただけると幸いです。。。</p>
-    <p>連絡先はこちらまでお願いいたいます。　</p>
-
+    <p>連絡先はこちらまでお願いたします。</p>
+    <p>risk.project2020[a].gmail.com</p>
+    <p>※[a]を@に変更してお願いします</p>
