--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <title>RISC</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -22,10 +23,10 @@
     <%= render 'layouts/navbar' %> 
     <%= render 'layouts/flash_messages' %>
 
-
     <div class="container">
       <%= yield %>
     </div>
+    
     <footer>
       <small>&copy; 2020 RISC!! version 0.10  by PROJECT RISC produced by MAX.K.K </small>
     </footer>
