--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,10 @@
 <div class='text-center mt-3'>
-  <h1>マイページ</h1>
-  <h2><%= @user.name %></h2>
+  <h1><%= @user.name %>さんの投稿一覧</h1>
 </div>
 
 <div id='user_map'>
 </div>
 
-<h3>自分の投稿一覧</h3>
-  <ul>
-    <% @user_map.each do |map| %>
-      <li><%= link_to map.id, map_path(map.id), data: {'turbolinks'=> false} %> <%= map.latitude %>: <%= map.longitude %>: <%= map.user.name %>:<%= map.title.title %></li>
-        <% if current_user == map.user %>
-          <%= link_to 'Delete', map, method: :delete, id: 'delete_button' %>
-        <% end %>
-    <% end %>
-  </ul>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP']%>"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
