--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,3 +6,16 @@
     height: 600px;
     margin: 0 auto;
 }
+
+#likes_map {
+    width: 100%;
+    height: 600px;
+    margin: 0 auto;
+}
+
+
+#bookmarks_map {
+    width: 100%;
+    height: 600px;
+    margin: 0 auto;
+}
