--- a/app/views/users/bookmarks.html.erb
+++ b/app/views/users/bookmarks.html.erb
@@ -1,9 +1,9 @@
 <div class='text-center mt-3'>
-  <h1><%= @user.name %>さんの投稿一覧</h1>
+  <h1><%= @user.name %>さんのブックマーク一覧</h1>
 </div>
 
 <% unless @user_map.empty? %>
-  <div id='user_map'>
+  <div id='bookmarks_map'>
   <!-- google maps here -->
   </div>
 
@@ -15,7 +15,7 @@
 
   <script type="text/javascript">
     handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {}, internal: {id: 'user_map'}}, function(){
+    handler.buildMap({ provider: {}, internal: {id: 'bookmarks_map'}}, function(){
         markers = handler.addMarkers(<%=raw @hash.to_json %>);
         handler.bounds.extendWith(markers);
         handler.fitMapToBounds();
@@ -23,10 +23,6 @@
     });
   </script>
 <% else %>
-  <div class='text-center mt-5 mb-5'>
-    <p>まだあなたの投稿がありません。新規投稿する場合は下のボタンをクリックしてください</p>
-   <%= link_to '新規投稿', new_map_path, data: {'turbolinks' => false }, class: 'btn btn-primary btn-lg' %> 
-  </div>
+<p class='text-center mt-5 mb-5'>ブックマークに登録された投稿がありません</p>
 <% end %>
-
 
