--- a/app/views/maps/_replies.html.erb
+++ b/app/views/maps/_replies.html.erb
@@ -6,7 +6,7 @@
         <p><%=r.reply %></p>
       </div>
       <div class='text-black-50'>
-        <p class='text-center'>投稿者:<%= r.user.name %>さん  投稿日時:<%= r.created_at %></p>
+        <p class='text-center'>投稿者:<%= r.user.name %>さん  投稿日時:<%= r.created_at.strftime('%Y/%m/%d %H:%M:%S')%></p>
       </div>  
       <div class='text-right'>
         <% if user_signed_in? %>
