add news contents

--- a/app/views/toppages/news.html.erb
+++ b/app/views/toppages/news.html.erb
@@ -1,3 +1,10 @@
 <div class='text-center mt-5'>
-  <p>準備中.........</p>
+    <div class='card mb-1 mt-1'>
+      <div class='card-hedder'>
+        <h4>2020-07-03 VERSION 0.10 (BETA版)リリース</h4>
+      </div>
+      <div class='card-body'>
+        <p>ベータ版として0.10をリリース致しました！</p>
+        <p>まだベータ版なので不具合等あれば申し訳ございません</p>
+    </div>
 </div>
