--- a/app/views/toppages/news.html.erb
+++ b/app/views/toppages/news.html.erb
@@ -1,9 +1,10 @@
 <div class='text-center mt-5'>
     <div class='card mb-1 mt-1'>
       <div class='card-hedder'>
-        <h4>2020-07-03 VERSION 0.10 (BETA版)リリース</h4>
+        <h4>2020-07-15 VERSION 0.10 (BETA版)リリース</h4>
       </div>
       <div class='card-body'>
         <p>ベータ版として0.10をリリース致しました！</p>
+        <p>不具合等発生した場合は運営宛にメールをお願い致します。</p>
       </div>
 </div>
