--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,10 @@
       <%= yield %>
     </div>
     
-    <footer>
+    <footer class=border-top>
+      <div class='container'>
+        <%= render 'layouts/footer_links' %>
+      </div>
       <small>&copy; 2020 RISC!! version 0.10  by PROJECT RISC produced by MAX.K.K </small>
     </footer>
   </body>
