--- a/app/views/toppages/about.html.erb
+++ b/app/views/toppages/about.html.erb
@@ -13,9 +13,9 @@
             <li>投稿閲覧機能</li>
             <li>投稿詳細閲覧機能</li>
             <li>※投稿機能</li>
-            <li>※他の投稿への評価機能</li>
-            <li>※他の投稿へのブックマーク機能</li>
-            <li>※他の投稿へのコメント機能</li>
+            <li>※他ユーザーの投稿への評価機能</li>
+            <li>※他ユーザーの投稿へのブックマーク機能</li>
+            <li>※他ユーザーの投稿へのコメント機能</li>
           </ul>
         <p>※のついた機能はユーザー登録をして頂いた方限定となります。</p>
       </div>
@@ -28,7 +28,7 @@
   <h3>サービス運営者について</h3>
     <p>このサービスは個人開発の為、皆様に御迷惑をかける可能性が多々あると思いますが、見守っていただけると幸いです。。。</p>
     <p>後々OSSとして様々な人にこのサービスをよりよくして行きたいと考えております。</p>
-    <p>RISCのGitHubレポジトリは<a href='https://github.com/maxkenkomoda/RISC'>こちら</a></p>
+    <p>RISCのGitHubレポジトリは<a href='https://github.com/maxkenkomoda/RISC/tree/develop'>こちら</a></p>
     <p>連絡先はこちらまでお願いたします。</p>
     <p>risk.project2020[a].gmail.com</p>
     <p>※[a]を@に変更してお願いします</p>
