--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -24,6 +24,9 @@
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
       </div>
+      <div class='form-group'>
+         <%= f.check_box :agreement, :as => :boolean, checked:false %> <%= link_to '利用規約', terms_of_service_path %>と<%= link_to 'プラバシーポリシー', plivacy_policy_path %>に同意する。
+      </div>
       <div class='action'>
         <%= f.submit "登録する", class: 'btn btn-lg btn-block btn-secondary' %>
        </div>
