--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,7 +16,7 @@
       <div class='form-group'>
         <%= f.label :password %>
           <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <em>(<%= @minimum_password_length %>文字以上)</em>
           <% end %><br />
         <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
       </div>
@@ -25,7 +25,7 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
       </div>
       <div class='form-group'>
-         <%= f.check_box :agreement, :as => :boolean, checked:false %> <%= link_to '利用規約', terms_of_service_path %>と<%= link_to 'プラバシーポリシー', plivacy_policy_path %>に同意する。
+         <%= f.check_box :agreement, :as => :boolean, checked:false %> <%= link_to '利用規約', terms_of_service_path %>と<%= link_to 'プライバシーポリシー', plivacy_policy_path %>に同意する。
       </div>
       <div class='action'>
         <%= f.submit "登録する", class: 'btn btn-lg btn-block btn-secondary' %>
@@ -33,5 +33,5 @@
     <% end %>
   </div>
 </div>
-<%= render "users/shared/links" %>
+<%= render "users/shared/links"
 
